--- a/css/general.css
+++ b/css/general.css
@@ -26,7 +26,7 @@ Paragraph default: 1.6
 - Tints: #fdf2e9, #fae5d3
 - Shades: #cf711f
 - Accents:
-- Greys: #555, #333, #ddd
+- Greys: #555, #333, #ddd , #6f6f6f
 
 --- 05 SHADOWS ---
 
