--- a/css/general.css
+++ b/css/general.css
@@ -55,6 +55,7 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   /* Precentage of the user's browser font-size setting */
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -62,6 +63,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  overflow-x: hidden;
 }
 
 /********************************/
