added mobile navigation and smooth scrolling

--- a/css/queries.css
+++ b/css/queries.css
@@ -119,10 +119,11 @@
   /* MOBILE NAVIGATION */
   .btn-mobile-nav {
     display: block;
+    z-index: 9999;
   }
 
   .main-nav {
-    background: rgba(255, 255, 255, 0.9);
+    background: rgba(255, 255, 255, 0.97);
     position: absolute;
     top: 0;
     left: 0%;
