--- a/css/general.css
+++ b/css/general.css
@@ -56,6 +56,9 @@ html {
   /* Precentage of the user's browser font-size setting */
   font-size: 62.5%;
   overflow-x: hidden;
+
+  /* Does NOT work on Safari */
+  /* scroll-behavior: smooth; */
 }
 
 body {
